> 887

BUGS:
- some menu bugs (new code for class generating)
- bug in db->where_uri
- bug in linklists

UPDATE:
- jQuery 1.4.4


> 848

NEW:
- more modules can be set in a page and they can also be ordered
- content -> spamfriendly mail now also creates a <NOSCRIPT> part
BUGS:
- some bugs in menu
- uploading of .sql files in db import (mime added)



> 840
-----

NEW:
- sitemap.xml automatic creation on logout
- frontend controller changed: now possible to load external module files
- nice path for download files (100% automatic) so original path is not known to user
- tinyMCE fullscreen & preview plugins
- easy run SQL updates
- form library is now easy to use in frontend:
- nice classes in form library
- cleanup fomr library and autoload necessary helpers
- added int_id to res_menu_result in plugin_automenu, for remembering original id
- content library: now spamfriendly mail can also include HTML (images for example)
- content library: adds now classes to headers
- now possible to include javascript to admin with site/assets/js/admin.js
- form library: includes hidden field and hidden passwords on frontend

BUGS:
- some bugs in plugin_stats
- small bug in spam library
- help popup: if no help is known, popup isn't shown anymore
- some bugs in library menu & plugin_automenu
- error/warnings if no database is selected
- language files english to en
- small styling bugs in IE8/7
- uri creating: better counting if double uri's

UPDATE:
- jQuery 1.4.3
- jQuery UI 1.8.6
- tinyMCE 3.3.9.2




> 801
-----

BUGS:
- Problems with PHP 5.3 (CI database extending), Solved, works still on PHP 4
- Render branch in Menu class had some problmens
- Uri/Automenu: languages are now reserved uri's (are automatically checked)

UPDATE:
- jQuery UI 1.8.5



>788
----

BUGS:
- tinyMCE styles dropdown didn't work
- styling of img popup wasn't nice
- db->where_uri(): had a bug when branches are up to 3 levels of more are the same. Now it's working!